--- a/others/starship.toml
+++ b/others/starship.toml
@@ -2,3 +2,18 @@ add_newline = false
 
 [line_break]
 disabled = true
+
+[git_status]
+stashed = '\$$count'
+ahead = '⇡$count'
+behind = '⇣$count'
+diverged = '⇡$ahead_count⇣$behind_count'
+conflicted = '=$count'
+deleted = '✘$count'
+renamed = '»$count'
+modified = '!$count'
+staged = '+$count'
+untracked = '?$count'
+
+[gcloud]
+disabled = true
