--- a/coc-settings.json
+++ b/coc-settings.json
@@ -17,5 +17,6 @@
     "typescriptreact": ["javascript"]
   },
   "coc.source.emoji.filetypes": null,
-  "Lua.telemetry.enable": false
+  "Lua.telemetry.enable": false,
+  "colors.enable": true
 }
