--- a/others/kitty.conf
+++ b/others/kitty.conf
@@ -1,87 +1,45 @@
-font_family      Rec Mono Casual Nerd Font Complete Mono
-bold_font        Rec Mono Casual Bold Nerd Font Complete Mono
-italic_font      Rec Mono Casual Italic Nerd Font Complete Mono
-bold_italic_font Rec Mono Casual Bold Italic Nerd Font Complete Mono
+font_family      RecMonoCasual Nerd Font Mono
+italic_font      RecMonoCasual Nerd Font Mono Italic
+bold_font        RecMonoCasual Nerd Font Mono Bold
+bold_italic_font RecMonoCasual Nerd Font Mono Bold Italic
 
-font_size 12.0
+font_size 11.0
 
 cursor_blink_interval 0
-background_opacity    0.9
+# background_opacity 0.3
 window_padding_width 4
 
-## name:     Catppuccin Kitty Mocha
-## author:   Catppuccin Org
-## license:  MIT
-## upstream: https://github.com/catppuccin/kitty/blob/main/mocha.conf
-## blurb:    Soothing pastel theme for the high-spirited!
+background #282c34
+foreground #abb2bf
+cursor none
 
-# The basic colors
-foreground              #CDD6F4
-background              #1E1E2E
-selection_foreground    #1E1E2E
-selection_background    #F5E0DC
+color0 #282c34
+color8 #5c6370
 
-# Cursor colors
-cursor                  #F5E0DC
-cursor_text_color       #1E1E2E
+color1 #ef596f
+color9 #f38897
 
-# URL underline color when hovering with mouse
-url_color               #F5E0DC
+color2 #89ca78
+color10 #a9d89d
 
-# Kitty window border colors
-active_border_color     #B4BEFE
-inactive_border_color   #6C7086
-bell_border_color       #F9E2AF
+color3 #e5c07b
+color11 #edd4a6
 
-# OS Window titlebar colors
-wayland_titlebar_color system
-macos_titlebar_color system
+color4 #61afef
+color12 #8fc6f4
 
-# Tab bar colors
-active_tab_foreground   #11111B
-active_tab_background   #CBA6F7
-inactive_tab_foreground #CDD6F4
-inactive_tab_background #181825
-tab_bar_background      #11111B
+color5 #d55fde
+color13 #e089e7
 
-# Colors for marks (marked text in the terminal)
-mark1_foreground #1E1E2E
-mark1_background #B4BEFE
-mark2_foreground #1E1E2E
-mark2_background #CBA6F7
-mark3_foreground #1E1E2E
-mark3_background #74C7EC
+color6 #2bbac5
+color14 #4bced8
 
-# The 16 terminal colors
+color7 #abb2bf
+color15 #c8cdd5
 
-# black
-color0 #45475A
-color8 #585B70
+# Tab bar
+active_tab_foreground   #e089e7
+active_tab_background   #282c34
+inactive_tab_foreground #5c6370
+inactive_tab_background #3e4451
 
-# red
-color1 #F38BA8
-color9 #F38BA8
-
-# green
-color2  #A6E3A1
-color10 #A6E3A1
-
-# yellow
-color3  #F9E2AF
-color11 #F9E2AF
-
-# blue
-color4  #89B4FA
-color12 #89B4FA
-
-# magenta
-color5  #F5C2E7
-color13 #F5C2E7
-
-# cyan
-color6  #94E2D5
-color14 #94E2D5
-
-# white
-color7  #BAC2DE
-color15 #A6ADC8
