--- a/others/.tmux.conf
+++ b/others/.tmux.conf
@@ -8,6 +8,8 @@ set -g default-terminal "tmux-256color"
 set -ga terminal-overrides ",*256col*:Tc"
 set -g focus-events on
 
+set-option -sa terminal-features ',xterm-kitty:RGB'
+
 set -g history-limit 10000
 
 set -g mouse on
@@ -30,7 +32,7 @@ bind-key -r K resize-pane -U 3
 bind-key -r H resize-pane -L 3
 bind-key -r L resize-pane -R 3
 
-set -g pane-border-style "fg=#3b4261"
-set -g pane-active-border-style "fg=#7aa2f7"
+set -g pane-active-border-style "fg=#5c6370"
+set -g pane-border-style "fg=#3e4451"
 
 run "~/.tmux/plugins/tpm/tpm"
