--- a/others/kitty.conf
+++ b/others/kitty.conf
@@ -1,12 +1,12 @@
-font_family      RecMonoCasual Nerd Font Mono
-italic_font      RecMonoCasual Nerd Font Mono Italic
-bold_font        RecMonoCasual Nerd Font Mono Bold
-bold_italic_font RecMonoCasual Nerd Font Mono Bold Italic
+font_family      JetBrainsMono NF Regular
+italic_font      JetBrainsMono NF Italic
+bold_font        JetBrainsMono NF Bold
+bold_italic_font JetBrainsMono NF Bold Italic
 
 font_size 11.0
-
+modify_font cell_height 120%
 cursor_blink_interval 0
-# background_opacity 0.3
+background_opacity 0.8
 window_padding_width 4
 
 background #282c34
@@ -16,11 +16,11 @@ cursor none
 color0 #282c34
 color8 #5c6370
 
-color1 #ef596f
-color9 #f38897
+color1 #e06c75
+color9 #e9969d
 
-color2 #89ca78
-color10 #a9d89d
+color2 #98c379
+color10 #b3d39c
 
 color3 #e5c07b
 color11 #edd4a6
@@ -28,17 +28,16 @@ color11 #edd4a6
 color4 #61afef
 color12 #8fc6f4
 
-color5 #d55fde
-color13 #e089e7
+color5 #c678dd
+color13 #d7a1e7
 
-color6 #2bbac5
-color14 #4bced8
+color6 #56b6c2
+color14 #7bc6d0
 
 color7 #abb2bf
 color15 #c8cdd5
 
-# Tab bar
-active_tab_foreground   #e089e7
+active_tab_foreground   #d7a1e7
 active_tab_background   #282c34
 inactive_tab_foreground #5c6370
 inactive_tab_background #3e4451
