--- a/.vim/coc-settings.json
+++ b/.vim/coc-settings.json
@@ -1,3 +1,6 @@
 {
-  "sumneko-lua.enableNvimLuaDev": true
+  "sumneko-lua.enableNvimLuaDev": true,
+  "Lua.workspace.library": [
+    "${3rd}/luv/library"
+  ]
 }
